# proxima-ml

./: Cargo.toml  README.md
src/: chebyshev.rs  cosine.rs  dot.rs  euclidean.rs  hamming.rs  jaccard.rs  lib.rs  manhattan.rs  minkowski.rs  utils.rs
tests/: chebyshev.rs  cosine.rs  dot.rs  euclidean.rs  hamming.rs  jaccard.rs  manhattan.rs  utils.rs
